# forgetful-observer

./: Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: rust.yml
examples/: recursive_search.rs
src/: lib.rs
